# c-robots-txt

./: .gitignore  LICENSE  README.md  meson.build  meson.options  setup-build.sh
benchmarks/: bench_general_parsing.c
fuzz/: fuzz_match_one_rule.c  fuzz_parse_directives.c
include/: c_robots_txt.h
src/: c_robots_txt.c
tests/: general_parsing.c  nul_characters.c  test-utils.h
tests/test-files/: general-parsing.txt  nul-characters.txt
